Fix table overflow on small screens

--- a/public/css/p4.css
+++ b/public/css/p4.css
@@ -133,7 +133,7 @@ label, legend {
     text-decoration: none;
 }
 
-.tableEntry {
+.table-entry {
     width: 50%;
 }
 
